1999-01-14  Jim Kingdon  <http://www.cyclic.com>

	* client.c (recv_line): If the line we are reading contains a
	character which would sign-extend to EOF, don't treat it as end of
	file.  recv() doesn't report end of file this way and this might
	fix bugs with 0xff characters.

1999-01-14  Larry Jones  <larry.jones@sdrc.com>

	* client.c (recv_line): Handle EOF from server.

	* sanity.sh (importc-8, importc-9): Accept anything in the seconds
	fields of the timestamps since touch doesn't set it reliably.
	(This isn't great, but it's better than nothing.)

1999-01-14  Jim Kingdon  <http://www.cyclic.com>

	* run.c (run_exec): Adjust comment about vfork; this isn't the place
	to get into a treatise about fork performance vs. vfork
	performance but it isn't quite as simple as whether one has
	copy-on-write.

1999-01-13  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (dotest_fail): Handle spurrious output from assert better.

	* sanity.sh (rcs3-4, rcs3-5a): Handle even more variants of the
	assertion failure message.

1999-01-12  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (mtfr-3): ls behavior varies wildly on nonexistant files,
        just use echo instead.

1999-01-11  Jim Meyering  <meyering@ascend.com>

	* sanity.sh (mkmodules-temp-file-removal): New test, for this.
	* mkmodules.c (mkmodules): Remove each `CVSROOT/.#[0-9]*' temporary
	file that's used to check out files listed in CVSROOT/checkoutlist.
	Remove extra semicolon at end of line.

1999-01-11  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (rcs3-5a): Allow for multiple lines of output before the
	assertion failure message.

	* sanity.sh (lockfiles-6, client-8): Work around bug in HP-UX chmod
	(doesn't allow anything to follow omitted permissions).

1999-01-09  Jim Kingdon  <http://www.cyclic.com>

	* client.c (set_sticky): Nonfatal error if we can't write it.
	* sanity.sh (dirs2-8 through dirs2-14): New tests, for this.

	* sanity.sh (rcs3): Write NUL character with tr not awk, in